<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, KisdroidActivity!</string>
    <string name="app_name">Kisdroid</string>
    <string name="sf_start">Starten</string>
    <string name="sf_stop">Stoppen</string>
    <string name="toast_fehler">Fehler beim verbinden:</string>
    <string name="pf_Server">Server Einstellungen</string>
    <string name="pf_host">Host:</string>
    <string name="pf_port">Port:</string>
    <string name="pf_einstellungen">Einstellungen</string>
    <string name="pf_gui">Oberfläche</string>
    <string name="pf_aktualisierung_netzwerke">Netzwerk Aktualisierung</string>
    <string name="pf_encryption">Verschlüsselung</string>
    <string name="pf_strength">Signalstärke</string>
    <string name="opt_start_stop">Starten/Stoppen</string>
    <string name="opt_map">Karte</string>
    <string name="gps_kf">Kein Fix</string>
    <string name="gps_3df">3D Fix</string>
    <string name="tx_bat_Ueberschrift">Battery</string>
    <string name="tx_server_port">Server: SERVER:PORT</string>
    <string name="tx_ssid">SSID</string>
    <string name="tx_mac">Mac</string>
    <string name="tx_encryption">encr</string>
    <string name="tx_rxl">RXL</string>
    <string name="tx_channel">CH</string>
    <string name="pf_channel">Channel</string>

</resources>