<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pf_Server" >
        <EditTextPreference
            android:dialogTitle="@string/pf_host"
            android:key="host" 
            android:title="@string/pf_host"/>
        <EditTextPreference
            android:dialogTitle="@string/pf_port"
            android:defaultValue="2501"
           	android:key="port" 
           	android:title="@string/pf_port"/>
        
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/pf_gui">
        <EditTextPreference 
            android:key="netzwerk_aktualisierungs_rate"
            android:defaultValue="2000"
            android:title="@string/pf_aktualisierung_netzwerke"/>
        <CheckBoxPreference 
            android:enabled="true"
            android:key="SSID"
            android:title="@string/tx_ssid"/>
        <CheckBoxPreference 
            android:enabled="true"
            android:key="mac"
            android:title="@string/tx_mac"/>
        <CheckBoxPreference 
            android:enabled="true"
            android:key="encryption"
            android:title="@string/pf_encryption"/>
        <CheckBoxPreference 
            android:enabled="true"
            android:key="strength"
            android:title="@string/pf_strength"/>
    </PreferenceCategory>

</PreferenceScreen>